tests/NormalTests/paczka2/big_fuzzy/70445308.err
Error in line 4: Nbn99GS A503 30,7
Error in line 3: 5alwijYD A210 99,0
Error in line 20: 5alwijYD A503 94,2
Error in line 21: h1YWx A503 30,8
Error in line 23: 5alwijYD A210 59,8
Error in line 27: 9yyWSlZBTL A503 27,6
Error in line 24: h1YWx A210 99,6
Error in line 31: tIlL4Ic S793 45,9
Error in line 45: tIlL4Ic A210 40,59
Error in line 58: iEYTyr7BP S701 22,87
Error in line 46: tIlL4Ic A210 27,8
Error in line 73: 9yyWSlZBTL S701 72,8
Error in line 92: 9yyWSlZBTL A503 62,6
Error in line 91: tIlL4Ic A210 50,0
Error in line 93: 9yyWSlZBTL A210 17,8
Error in line 94: tIlL4Ic S701 0,4
Error in line 66: A503 S701 27,7
Error in line 63: h1YWx S793 260,0
Error in line 110: h1YWx A210 8,9
Error in line 112: h1YWx A503 20,4
Error in line 124: h1YWx S701 30,8
Error in line 127: tIlL4Ic A210 2,2
Error in line 120: 9yyWSlZBTL S701 25,0
Error in line 134: tIlL4Ic S793 873,8
Error in line 149: h1YWx A503 334,2
Error in line 166: tIlL4Ic A210 90,4
Error in line 164: A503 A503 28,9
Error in line 182: A503 S793 89,8
Error in line 186: A503 S701 77,9
Error in line 187: iEYTyr7BP A503 51,7
Error in line 199: 9yyWSlZBTL S793 68,0
Error in line 206: 5alwijYD A210 50,3
Error in line 211: tIlL4Ic A210 65,31
Error in line 204: tIlL4Ic A210 65,1
Error in line 193: Nbn99GS S701 90,1
Error in line 230: tIlL4Ic S793 74,8
Error in line 233: tIlL4Ic A210 72,3
Error in line 239: 9yyWSlZBTL A503 79,5
Error in line 240: 9yyWSlZBTL A210 7,8
